COMMIT 9